--- a/emscripten/htdocs/stdlib/common.css
+++ b/emscripten/htdocs/stdlib/common.css
@@ -260,3 +260,26 @@ label {
   cursor: pointer;
 }
 
+
+/* modal crap needed to satisfy Google Chrome's "autoplay" bullshit */
+.modal-autoplay {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    padding-top: 0px;
+    left: 0;
+    top: 0;
+    width:  100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(1,0,0,0.4); 
+}
+.modal-autoplay-content {
+    background-color: #d0d0d0;
+	margin: 10px;
+    padding: 10px;
+    border: 1px solid #000;
+    width: 500px;
+}
+
